force-app/main/default/objects/Reference_PEP_Due_Diligence__c/Reference_PEP_Due_Diligence__c.object-meta.xml
<CustomObject>
    <description>A reference object in order for the team to monitor their work load.</description>
    <label>Reference PEP Due Diligence</label>
    <nameField>
        <displayFormat>Ref PEP-{000000}</displayFormat>
        <label>Reference PEP Due Diligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference_PEP_Due_Diligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>