force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Adoption_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Agreement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adoption Agreement</label>
    <type>Date</type>
</CustomField>