force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Anti_Cutback_Result__c.field-meta.xml
<CustomField>
    <fullName>Anti_Cutback_Result__c</fullName>
    <label>Anti-Cutback Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Research Needed</fullName>
            </value>
            <value>
                <fullName>Client changed mind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>