force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Anti_Cutback_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Anti_Cutback_Review_Complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anti-Cutback Review Complete</label>
    <type>Date</type>
</CustomField>