force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Authorization_Letter__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Letter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Letter</label>
    <type>Date</type>
</CustomField>