force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Basic_Plan_Document__c.field-meta.xml
<CustomField>
    <fullName>Basic_Plan_Document__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Basic Plan Document</label>
    <type>Date</type>
</CustomField>