force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Census__c.field-meta.xml
<CustomField>
    <fullName>Census__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Census</label>
    <type>Date</type>
</CustomField>