force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Client_Lost_During_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Client_Lost_During_Onboarding__c</fullName>
    <formula>Reference_401k_S125__r.Client_Lost_During_Onboarding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Lost During Onboarding</label>
    <type>Date</type>
</CustomField>