force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Orientation_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Call_Complete__c</fullName>
    <formula>Reference_401k_S125__r.Orientation_Call_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orientation Call Complete</label>
    <type>Date</type>
</CustomField>