force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Participant_Summary__c.field-meta.xml
<CustomField>
    <fullName>Participant_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Summary</label>
    <type>Date</type>
</CustomField>