force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Pre_Sale_Review__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sale_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Sale Review</label>
    <type>Date</type>
</CustomField>