force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Reference_401k_S125__c.field-meta.xml
<CustomField>
    <fullName>Reference_401k_S125__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference 401k/S125</label>
    <referenceTo>Reference_401k_S125__c</referenceTo>
    <relationshipLabel>Reference_PEP_Due_Diligence</relationshipLabel>
    <relationshipName>Reference_PEP_Due_Diligence</relationshipName>
    <type>Lookup</type>
</CustomField>