force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Risk_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Assessment Complete</label>
    <type>Date</type>
</CustomField>