force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Risk_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Assessment Notes</label>
    <type>TextArea</type>
</CustomField>