force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Risk_Assessment_Result__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Result__c</fullName>
    <label>Risk Assessment Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Corrective Action Pending</fullName>
            </value>
            <value>
                <fullName>Documents Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>