force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Submission_Docs_Received_in_Good_Order__c.field-meta.xml
<CustomField>
    <fullName>Submission_Docs_Received_in_Good_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Docs Received in Good Order</label>
    <type>Date</type>
</CustomField>