force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/Summary_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Summary_Plan_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary Plan Description</label>
    <type>Date</type>
</CustomField>