force-app/main/default/objects/Reference_PEP_Due_Diligence__c/fields/X1st_Communication_Sent_to_Prior_RK__c.field-meta.xml
<CustomField>
    <fullName>X1st_Communication_Sent_to_Prior_RK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Communication Sent to Prior RK</label>
    <type>Date</type>
</CustomField>