force-app/main/default/objects/Reference_PEP_Due_Diligence__c/recordTypes/PEP_Due_Diligence.recordType-meta.xml
<RecordType>
    <fullName>PEP_Due_Diligence</fullName>
    <active>true</active>
    <label>PEP Due Diligence</label>
</RecordType>